revert: add new files
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@57054 52c4871e-980c-0410-b1e0-e73912ce01f8